express js use commonjs, so we need to add babel and some config to run ES6 in this project

--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start-es6": "node --experimental-modules ./bin/www",
+    "dev": "nodemon --exec babel-node ./bin/www"
   },
+  "type": "module",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
